--- a/assets/sass/sections/case/_index.scss
+++ b/assets/sass/sections/case/_index.scss
@@ -33,7 +33,7 @@
 
       @include mq(mobile) {
         bottom: 0;
-        height: 33.33%;
+        height: 66.66%;
         left: 0;
         right: auto;
         top: auto;
